--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
 
         <div class="content">
-            <h3>We Manufacture Electrical & Automation Control Panel</h3>
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, aperiam</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus qui ea ullam, enim tempora ipsum fuga alias quae ratione a officiis id temporibus autem? Quod nemo facilis cupiditate. Ex, vel?</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit amet enim quod veritatis, nihil voluptas culpa! Neque consectetur obcaecati sapiente?</p>
             <a href="#" class="btn">learn more</a>
